# sarcastic-text-for-cli

./: .gitignore  README.md  pyproject.toml
sarcastic_text/: __init__.py  main.py
