[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sarcastic_text"
version = "0.1.0"
description = "Sarcastic text converters including cli interface."
authors = [{ name = "nonchris", email = "git@chris-ge.de" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
sarcasm = "sarcastic_text:cli_main"

[project.urls]
"Homepage" = "https://github.com/nonchris/sarcastic-text-for-cli/tree/main"
"Source" = "https://github.com/nonchris/sarcastic-text-for-cli/tree/main"
